# netlink-cmake

./: .gitignore  CMakeLists.txt
examples/: helloworld.cpp
netlink-kernel/: Kbuild.in  Makefile  Makefile.original  module.c
netlink-kernel/src/: nl_kernel.c  nl_kernel.h
netlink-userspace/: CMakeLists.txt  NetlinkTransport.cpp  NetlinkTransport.h  configure.sh  nldef.h  proto_buffer.h  select_event.cpp  select_event.h
netlink-userspace/versions/1.0-pre6/: NetlinkTransportPrivate.cpp  NetlinkTransportPrivate.h
netlink-userspace/versions/kernel-2.8.32/: NetlinkTransportPrivate.cpp  NetlinkTransportPrivate.h
